--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   font-family: Bosnia;
   text-align: center;
   background-color: #dae6f3;
+  overflow: hidden;
   
   
 
@@ -51,17 +52,7 @@ body {
   transform: scale(0.9);
 }
 
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  font-size: 11px;
-  padding: 0px;
-  color: #42526cc7;
-  text-align: center;
-  transform: scale(0.9, 0.9);
-}
+
 
 @media screen and (max-width: 576px) {
   .icon {
